# KumCAD

./: .gitignore  CMakeLists.txt  README.md
packaging/linux/: build-appimage.sh  generate-icon.sh  kumcad.desktop
packaging/windows/: build-windows.sh  mingw-toolchain.cmake
src/app/: AssemblyWindow.cpp  CMakeLists.txt  CommandAliasDialog.cpp  CommandAliasDialog.h  CommandAliases.cpp  CommandAliases.h  CommandDispatcher.cpp  CommandDispatcher.h  DesignCenterPanel.cpp  DesignCenterPanel.h  DrawingView.cpp  DrawingView.h  EntityPainter.cpp  EntityPainter.h  IconFactory.cpp  IconFactory.h  LayerPanel.cpp  LayerPanel.h  LayerStatesDialog.cpp  LayerStatesDialog.h  MainWindow.cpp  MainWindow.h  MarkupSetPanel.cpp  MarkupSetPanel.h  PlotStyleDialog.cpp  PlotStyleDialog.h  PrintRenderer.cpp  PropertiesPanel.cpp  PropertiesPanel.h  SheetSetPanel.cpp  SheetSetPanel.h  SketchEditorDialog.cpp  SketchEditorDialog.h  SketchFeatureDialog.cpp  SketchFeatureDialog.h  SketchPlaneDialog.cpp  SketchPlaneDialog.h  SketchView.cpp  SketchView.h  ToolPalette.cpp  (+8 more)
src/app/commands/: AlignCommand.cpp  AlignCommand.h  AnnoScaleCommand.h  ArcCommand.h  AreaCommand.cpp  AreaCommand.h  AttDefCommand.cpp  AttDefCommand.h  AuditCommand.cpp  AuditCommand.h  BlockParamCommand.cpp  BlockParamCommand.h  BoundaryCommand.cpp  BoundaryCommand.h  BreakCommand.cpp  BreakCommand.h  CamCommands.cpp  CamCommands.h  ChamferCommand.cpp  ChamferCommand.h  CircleCommand.h  ClipboardPasteCommand.cpp  ClipboardPasteCommand.h  CopyCommand.cpp  CopyCommand.h  DataExtractionCommand.cpp  DataExtractionCommand.h  DataLinkCommand.cpp  DataLinkCommand.h  DimCommand.cpp  DimCommand.h  DimEditCommand.cpp  DimEditCommand.h  DimStyleCommand.cpp  DistCommand.cpp  DistCommand.h  DonutCommand.cpp  DonutCommand.h  DrawCommand.h  EllipseCommand.cpp  (+103 more)
src/core/: CMakeLists.txt
src/core/core3d/: Assembly.cpp  Assembly.h  Bim.cpp  Bim.h  Cam3D.cpp  Cam3D.h  Commands3D.h  Document3D.cpp  Document3D.h  ExternalGeometry.cpp  ExternalGeometry.h  Feature3D.h  Fem.cpp  Fem.h  Fingerprint.h  LispBindings3D.cpp  LispBindings3D.h  Persistence3D.cpp  Pick3D.cpp  Pick3D.h  Piping.cpp  Piping.h  Shape3D.h  SheetMetal.cpp  SheetMetal.h  SketchToFace.cpp  SketchToFace.h  TechDraw.cpp  TechDraw.h  TopoNaming.cpp  TopoNaming.h
src/core/document/: Audit.cpp  Audit.h  Block.h  Commands.h  DataExtraction.cpp  DataExtraction.h  Document.cpp  Document.h  DocumentConstraints.cpp  DocumentConstraints.h  DocumentExtract.cpp  DocumentExtract.h  ExpressTools.cpp  ExpressTools.h  Layer.h  LayerTranslator.cpp  LayerTranslator.h  Layout.h  LineType.cpp  LineType.h  PlotStyle.h  SheetSet.cpp  SheetSet.h  Spreadsheet.cpp  Spreadsheet.h
src/core/geometry/: Arc.cpp  Arc.h  AttDef.h  BoundaryTrace.cpp  BoundaryTrace.h  ChamferOps.cpp  ChamferOps.h  Circle.cpp  Circle.h  ConstructionLine.h  Dimension.cpp  Dimension.h  DonutOps.cpp  DonutOps.h  Ellipse.cpp  Ellipse.h  Entity.h  Hatch.h  HatchPattern.cpp  HatchPattern.h  Insert.cpp  Insert.h  Intersect.cpp  Intersect.h  Line.cpp  Line.h  MLeader.cpp  MLeader.h  MText.h  ModifyOps.cpp  ModifyOps.h  Point2D.h  PointCloud.cpp  PointCloud.h  PointEnt.h  PolygonOps.cpp  PolygonOps.h  Polyline.cpp  Polyline.h  PolylineOps.cpp  (+14 more)
src/core/io/: Csv.cpp  Csv.h  DwgReader.cpp  DwgReader.h  DwgWriter.cpp  DwgWriter.h  DxfColors.cpp  DxfColors.h  DxfReader.cpp  DxfReader.h  DxfWriter.cpp  DxfWriter.h  KiCadMod.cpp  KiCadMod.h  KiCadPcb.cpp  KiCadPcb.h  KiCadSch.cpp  KiCadSch.h  PointCloudFile.cpp  PointCloudFile.h  SExpr.cpp  SExpr.h  Xref.cpp  Xref.h  Zip.cpp  Zip.h
src/core/lisp/: LispInterpreter.cpp  LispInterpreter.h
src/core/pcb/: Autorouter.cpp  Autorouter.h  Board3D.cpp  Board3D.h  BoardOutline.cpp  BoardOutline.h  CopperPour.cpp  CopperPour.h  DiffPair.cpp  DiffPair.h  Drc.cpp  Drc.h  FootprintGenerator.cpp  FootprintGenerator.h  GerberWriter.cpp  GerberWriter.h  LengthTuning.cpp  LengthTuning.h  NetClass.cpp  NetClass.h  Ratsnest.cpp  Ratsnest.h  SpecctraWriter.cpp  SpecctraWriter.h  Stackup.cpp  Stackup.h  Teardrop.cpp  Teardrop.h  ViaStitching.cpp  ViaStitching.h
src/core/schematic/: Bom.cpp  Bom.h  Erc.cpp  Erc.h  Netlist.cpp  Netlist.h  Sheets.cpp  Sheets.h  SymbolLibrary.cpp
src/core/sketch/: ConstraintSolver.cpp  ConstraintSolver.h  LinearSolve.cpp  LinearSolve.h  SketchGeometry.cpp  SketchGeometry.h
src/core/util/: Expr.cpp  Expr.h  Script.cpp  Script.h
tests/core/: AssemblyTests.cpp  AuditTests.cpp  AutorouterTests.cpp  BimTests.cpp  Board3DTests.cpp  BoardOutlineTests.cpp  BomTests.cpp  CMakeLists.txt  Cam3DTests.cpp  ChamferOpsTests.cpp  CommandStackTests.cpp  CopperPourTests.cpp  Core3DTests.cpp  CsvTests.cpp  DataExtractionTests.cpp  DiffPairTests.cpp  DocumentConstraintsTests.cpp  DocumentExtractTests.cpp  DocumentTests.cpp  DonutOpsTests.cpp  DwgIoTests.cpp  DxfIoTests.cpp  ExprTests.cpp  ExpressToolsTests.cpp  ExternalGeometryTests.cpp  FemTests.cpp  FootprintGeneratorTests.cpp  GeometryTests.cpp  KiCadIoTests.cpp  KiCadPcbTests.cpp  KiCadSchHierarchicalTests.cpp  KiCadSchTests.cpp  LayerTranslatorTests.cpp  LengthTuningTests.cpp  LispBindings3DTests.cpp  LispTests.cpp  ModifyOpsTests.cpp  NetClassTests.cpp  PcbTests.cpp  Persistence3DTests.cpp  (+21 more)
