find_package(Qt6 REQUIRED COMPONENTS Widgets OpenGLWidgets PrintSupport)

set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)

add_executable(kumcad
    main.cpp
    MainWindow.h
    MainWindow.cpp
    DrawingView.h
    DrawingView.cpp
    EntityPainter.h
    EntityPainter.cpp
    CommandLine.h
    CommandLine.cpp
    CommandDispatcher.h
    CommandDispatcher.cpp
    IconFactory.h
    IconFactory.cpp
    LayerPanel.h
    LayerPanel.cpp
    PropertiesPanel.h
    PropertiesPanel.cpp
    commands/DrawCommand.h
    commands/LineCommand.h
    commands/LineCommand.cpp
    commands/LtScaleCommand.h
    commands/CircleCommand.h
    commands/CircleCommand.cpp
    commands/ArcCommand.h
    commands/ArcCommand.cpp
    commands/PolylineCommand.h
    commands/PolylineCommand.cpp
    commands/PeditCommand.h
    commands/PeditCommand.cpp
    commands/EllipseCommand.h
    commands/EllipseCommand.cpp
    commands/SplineCommand.h
    commands/SplineCommand.cpp
    commands/TextCommand.h
    commands/TextCommand.cpp
    commands/MTextCommand.h
    commands/MTextCommand.cpp
    commands/MviewCommand.h
    commands/MviewCommand.cpp
    commands/VpScaleCommand.h
    commands/MoveCommand.h
    commands/MoveCommand.cpp
    commands/StretchCommand.h
    commands/StretchCommand.cpp
    commands/LengthenCommand.h
    commands/LengthenCommand.cpp
    commands/BreakCommand.h
    commands/BreakCommand.cpp
    commands/AlignCommand.h
    commands/AlignCommand.cpp
    commands/OsnapCommand.h
    commands/OsnapCommand.cpp
    commands/PolarAngCommand.h
    commands/CopyCommand.h
    commands/CopyCommand.cpp
    commands/RotateCommand.h
    commands/RotateCommand.cpp
    commands/ScaleCommand.h
    commands/ScaleCommand.cpp
    commands/RectangCommand.h
    commands/RectangCommand.cpp
    commands/MirrorCommand.h
    commands/MirrorCommand.cpp
    commands/OffsetCommand.h
    commands/OffsetCommand.cpp
    commands/DistCommand.h
    commands/DistCommand.cpp
    commands/TrimCommand.h
    commands/TrimCommand.cpp
    commands/ExtendCommand.h
    commands/ExtendCommand.cpp
    commands/FilletCommand.h
    commands/FilletCommand.cpp
    commands/HatchCommand.h
    commands/HatchCommand.cpp
    commands/DimCommand.h
    commands/DimCommand.cpp
    commands/DimRadialCommand.h
    commands/DimRadialCommand.cpp
    commands/DimAngularCommand.h
    commands/DimAngularCommand.cpp
    commands/DimStyleCommand.h
    commands/DimStyleCommand.cpp
    commands/AreaCommand.h
    commands/AreaCommand.cpp
    commands/ArrayCommand.h
    commands/ArrayCommand.cpp
    commands/BlockCommand.h
    commands/BlockCommand.cpp
    commands/InsertCommand.h
    commands/InsertCommand.cpp
    commands/LeaderCommand.h
    commands/LeaderCommand.cpp
)

target_include_directories(kumcad PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(kumcad PRIVATE lcad_core Qt6::Widgets Qt6::OpenGLWidgets Qt6::PrintSupport)
